--- a/less/bootstrap.less
+++ b/less/bootstrap.less
@@ -5,16 +5,22 @@
  */
 
 // Core variables and mixins
+// 全局变量
 @import "variables.less";
 @import "mixins.less";
 
 // Reset and dependencies
+// 重置全局默认样式
 @import "normalize.less";
+// 设置打印样式，使用媒体查询(@media print)
 @import "print.less";
+// 引用字体图标样式
 @import "glyphicons.less";
 
 // Core CSS
+// 设置全局基础样式
 @import "scaffolding.less";
+// 排版样式
 @import "type.less";
 @import "code.less";
 @import "grid.less";
