--- a/less/mixins/background-variant.less
+++ b/less/mixins/background-variant.less
@@ -1,5 +1,6 @@
-// Contextual backgrounds
+// Contextual backgrounds(文本背景)
 
+// 背景变化
 .bg-variant(@color) {
   background-color: @color;
   a&:hover,
