--- a/less/mixins/image.less
+++ b/less/mixins/image.less
@@ -3,7 +3,7 @@
 // - Retina image
 
 
-// Responsive image
+// Responsive(响应式) image
 //
 // Keep images from scaling beyond the width of their parents.
 .img-responsive(@display: block) {
