--- a/less/normalize.less
+++ b/less/normalize.less
@@ -24,6 +24,7 @@ body {
 // ==========================================================================
 
 //
+// Correct: 纠正
 // Correct `block` display not defined for any HTML5 element in IE 8/9.
 // Correct `block` display not defined for `details` or `summary` in IE 10/11
 // and Firefox.
@@ -48,7 +49,7 @@ summary {
 
 //
 // 1. Correct `inline-block` display not defined in IE 8/9.
-// 2. Normalize vertical alignment of `progress` in Chrome, Firefox, and Opera.
+// 2. Normalize(使正常) vertical alignment of `progress` in Chrome, Firefox, and Opera.
 //
 
 audio,
@@ -70,7 +71,7 @@ audio:not([controls]) {
 }
 
 //
-// Address `[hidden]` styling not present in IE 8/9/10.
+// Address(处理) `[hidden]` styling not present in IE 8/9/10.
 // Hide the `template` element in IE 8/9/10/11, Safari, and Firefox < 22.
 //
 
@@ -175,7 +176,7 @@ sub {
   bottom: -0.25em;
 }
 
-// Embedded content
+// Embedded(嵌入的) content
 // ==========================================================================
 
 //
@@ -194,7 +195,7 @@ svg:not(:root) {
   overflow: hidden;
 }
 
-// Grouping content
+// Grouping content(群组元素)
 // ==========================================================================
 
 //
@@ -234,7 +235,7 @@ samp {
   font-size: 1em;
 }
 
-// Forms
+// Forms(表单)
 // ==========================================================================
 
 //
@@ -406,7 +407,7 @@ optgroup {
   font-weight: bold;
 }
 
-// Tables
+// Tables(表格)
 // ==========================================================================
 
 //
