--- a/less/thumbnails.less
+++ b/less/thumbnails.less
@@ -1,5 +1,5 @@
 //
-// Thumbnails
+// Thumbnails(更为复杂的缩略图，相对于scaffolding.less的.img-thumbnail来说，可以配合bootstrap的栅格系统显示标题、描述内容、按钮等)
 // --------------------------------------------------
 
 
