--- a/less/variables.less
+++ b/less/variables.less
@@ -5,7 +5,7 @@
 
 //== Colors
 //
-//## Gray and brand colors for use across Bootstrap.
+//## Gray and brand colors for use across Bootstrap.(设置灰色和标记brand颜色)
 
 @gray-base:              #000;
 @gray-darker:            lighten(@gray-base, 13.5%); // #222
@@ -21,7 +21,7 @@
 @brand-danger:          #d9534f;
 
 
-//== Scaffolding
+//== Scaffolding(架手架全局基础样式)
 //
 //## Settings for some of the most global styles.
 
@@ -30,7 +30,7 @@
 //** Global text color on `<body>`.
 @text-color:            @gray-dark;
 
-//** Global textual link color.
+//** Global textual(正文) link color.
 @link-color:            @brand-primary;
 //** Link hover color set via `darken()` function.
 @link-hover-color:      darken(@link-color, 15%);
@@ -38,13 +38,13 @@
 @link-hover-decoration: underline;
 
 
-//== Typography
+//== Typography(排版[type.less]用到的变量)
 //
 //## Font, line-height, and color for body text, headings, and more.
 
 @font-family-sans-serif:  "Helvetica Neue", Helvetica, Arial, sans-serif;
 @font-family-serif:       Georgia, "Times New Roman", Times, serif;
-//** Default monospace fonts for `<code>`, `<kbd>`, and `<pre>`.
+//** Default monospace(字体格式) fonts for `<code>`, `<kbd>`, and `<pre>`.
 @font-family-monospace:   Menlo, Monaco, Consolas, "Courier New", monospace;
 @font-family-base:        @font-family-sans-serif;
 
