--- a/less/bootstrap.less
+++ b/less/bootstrap.less
@@ -22,8 +22,10 @@
 @import "scaffolding.less";
 // 排版样式
 @import "type.less";
+// 代码
 @import "code.less";
 @import "grid.less";
+// 表格
 @import "tables.less";
 @import "forms.less";
 @import "buttons.less";
