--- a/less/code.less
+++ b/less/code.less
@@ -1,5 +1,5 @@
 //
-// Code (inline and block)
+// Code (inline and block) 代码
 // --------------------------------------------------
 
 
@@ -11,7 +11,7 @@ samp {
   font-family: @font-family-monospace;
 }
 
-// Inline code
+// Inline code 显示单行内联代码
 code {
   padding: 2px 4px;
   font-size: 90%;
@@ -20,7 +20,7 @@ code {
   border-radius: @border-radius-base;
 }
 
-// User input typically entered via keyboard
+// User input typically entered via keyboard 显示用户输入代码
 kbd {
   padding: 2px 4px;
   font-size: 90%;
@@ -37,7 +37,7 @@ kbd {
   }
 }
 
-// Blocks of code
+// Blocks of code 显示多行块代码
 pre {
   display: block;
   padding: ((@line-height-computed - 1) / 2);
