--- a/less/mixins/table-row.less
+++ b/less/mixins/table-row.less
@@ -1,4 +1,4 @@
-// Tables
+// Tables 表格
 
 .table-row-variant(@state; @background) {
   // Exact selectors below required to override `.table-striped` and prevent
