--- a/less/bootstrap.less
+++ b/less/bootstrap.less
@@ -4,39 +4,45 @@
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
 
-// Core variables and mixins
-// 全局变量
+// Core variables and mixins(全局变量和宏)
 @import "variables.less";
 @import "mixins.less";
 
-// Reset and dependencies
-// 重置全局默认样式
+// Reset and dependencies(重置全局默认样式)
 @import "normalize.less";
 // 设置打印样式，使用媒体查询(@media print)
 @import "print.less";
 // 引用字体图标样式
 @import "glyphicons.less";
 
-// Core CSS
+// Core CSS(核心CSS)
 // 设置全局基础样式
 @import "scaffolding.less";
 // 排版样式
 @import "type.less";
 // 代码
 @import "code.less";
+// 网格系统
 @import "grid.less";
 // 表格
 @import "tables.less";
+// 表单
 @import "forms.less";
+// 按钮
 @import "buttons.less";
 
-// Components
+// Components(组件)
 @import "component-animations.less";
+// 下拉菜单
 @import "dropdowns.less";
+// 按钮组
 @import "button-groups.less";
 @import "input-groups.less";
+// 导航
 @import "navs.less";
+// 导航条
 @import "navbar.less";
+// 面包屑式导航
 @import "breadcrumbs.less";
 @import "pagination.less";
 @import "pager.less";
