--- a/less/breadcrumbs.less
+++ b/less/breadcrumbs.less
@@ -1,8 +1,6 @@
 //
-// Breadcrumbs
+// Breadcrumbs(面包屑式导航)
 // --------------------------------------------------
-
-
 .breadcrumb {
   padding: @breadcrumb-padding-vertical @breadcrumb-padding-horizontal;
   margin-bottom: @line-height-computed;
