--- a/less/component-animations.less
+++ b/less/component-animations.less
@@ -1,12 +1,11 @@
 //
-// Component animations
+// Component animations(组件动画)
 // --------------------------------------------------
 
 // Heads up!
 //
 // We don't use the `.opacity()` mixin here since it causes a bug with text
 // fields in IE7-8. Source: https://github.com/twbs/bootstrap/pull/3552.
-
 .fade {
   opacity: 0;
   .transition(opacity .15s linear);
@@ -17,7 +16,6 @@
 
 .collapse {
   display: none;
-
   &.in      { display: block; }
   tr&.in    { display: table-row; }
   tbody&.in { display: table-row-group; }
