--- a/less/mixins/buttons.less
+++ b/less/mixins/buttons.less
@@ -1,4 +1,4 @@
-// Button variants
+// Button variants(按钮函数)
 //
 // Easily pump out default styles, as well as :hover, :focus, :active,
 // and disabled options for all buttons
@@ -56,7 +56,7 @@
   }
 }
 
-// Button sizes
+// Button sizes(按钮大小)
 .button-size(@padding-vertical; @padding-horizontal; @font-size; @line-height; @border-radius) {
   padding: @padding-vertical @padding-horizontal;
   font-size: @font-size;
