--- a/less/mixins/vendor-prefixes.less
+++ b/less/mixins/vendor-prefixes.less
@@ -216,9 +216,8 @@
 }
 
 
-// User select
+// User select(用户选择文本)
 // For selecting text on the page
-
 .user-select(@select) {
   -webkit-user-select: @select;
      -moz-user-select: @select;
