--- a/less/buttons.less
+++ b/less/buttons.less
@@ -2,7 +2,7 @@
 // Buttons(按钮)
 // --------------------------------------------------
 
-// Base styles
+// Base styles(基础样式)
 // --------------------------------------------------
 .btn {
   display: inline-block;
@@ -57,7 +57,7 @@
   }
 }
 
-// Alternate buttons
+// Alternate buttons(交互式按钮)
 // --------------------------------------------------
 .btn-default {
   .button-variant(@btn-default-color; @btn-default-bg; @btn-default-border);
@@ -82,7 +82,7 @@
   .button-variant(@btn-danger-color; @btn-danger-bg; @btn-danger-border);
 }
 
-// Link buttons
+// Link buttons(链接按钮)
 // -------------------------
 // Make a button look and behave like a link
 .btn-link {
@@ -120,7 +120,7 @@
   }
 }
 
-// Button Sizes
+// Button Sizes(按钮大小)
 // --------------------------------------------------
 .btn-lg {
   // line-height: ensure even-numbered height of button next to large input
@@ -134,7 +134,7 @@
   .button-size(@padding-xs-vertical; @padding-xs-horizontal; @font-size-small; @line-height-small; @btn-border-radius-small);
 }
 
-// Block button
+// Block button(块状按钮)
 // --------------------------------------------------
 .btn-block {
   display: block;
