--- a/less/navs.less
+++ b/less/navs.less
@@ -1,11 +1,10 @@
 //
-// Navs
+// Navs(导航)
 // --------------------------------------------------
 
 
-// Base class
+// Base class(基础样式)
 // --------------------------------------------------
-
 .nav {
   margin-bottom: 0;
   padding-left: 0; // Override default ul/ol
@@ -69,9 +68,8 @@
 }
 
 
-// Tabs
+// Tabs(标签形tab导航)
 // -------------------------
-
 // Give the tabs something to sit on
 .nav-tabs {
   border-bottom: 1px solid @nav-tabs-border-color;
@@ -112,7 +110,7 @@
 }
 
 
-// Pills
+// Pills(胶囊形导航)
 // -------------------------
 .nav-pills {
   > li {
@@ -139,7 +137,7 @@
 }
 
 
-// Stacked pills
+// Stacked pills(垂直堆叠的导航)
 .nav-stacked {
   > li {
     float: none;
@@ -154,9 +152,8 @@
 // Nav variations
 // --------------------------------------------------
 
-// Justified nav links
+// Justified nav links(自适应导航)
 // -------------------------
-
 .nav-justified {
   width: 100%;
 
@@ -230,9 +227,8 @@
 }
 
 
-// Dropdowns
+// Dropdowns(二级导航)
 // -------------------------
-
 // Specific dropdowns
 .nav-tabs .dropdown-menu {
   // make dropdown border overlap tab border
