--- a/less/bootstrap.less
+++ b/less/bootstrap.less
@@ -32,6 +32,7 @@
 @import "buttons.less";
 
 // Components(组件)
+// 组件动画
 @import "component-animations.less";
 // 下拉菜单
 @import "dropdowns.less";
@@ -44,16 +45,26 @@
 @import "navbar.less";
 // 面包屑式导航
 @import "breadcrumbs.less";
+// 分页导航
 @import "pagination.less";
+// 翻页分页导航
 @import "pager.less";
+// 标签
 @import "labels.less";
+// 徽章
 @import "badges.less";
 @import "jumbotron.less";
+// 缩略图
 @import "thumbnails.less";
+// 警示框
 @import "alerts.less";
+// 进度条
 @import "progress-bars.less";
+// 媒体对象
 @import "media.less";
+// 列表组
 @import "list-group.less";
+// 面板
 @import "panels.less";
 @import "responsive-embed.less";
 @import "wells.less";
