--- a/less/labels.less
+++ b/less/labels.less
@@ -1,7 +1,6 @@
 //
-// Labels
+// Labels(标签)
 // --------------------------------------------------
-
 .label {
   display: inline;
   padding: .2em .6em .3em;
