--- a/less/pager.less
+++ b/less/pager.less
@@ -1,8 +1,6 @@
 //
-// Pager pagination
+// Pager pagination(翻页分页导航)
 // --------------------------------------------------
-
-
 .pager {
   padding-left: 0;
   margin: @line-height-computed 0;
