--- a/less/mixins/pagination.less
+++ b/less/mixins/pagination.less
@@ -1,4 +1,4 @@
-// Pagination
+// Pagination(分页导航)
 
 .pagination-size(@padding-vertical; @padding-horizontal; @font-size; @line-height; @border-radius) {
   > li {
