--- a/less/navbar.less
+++ b/less/navbar.less
@@ -2,7 +2,7 @@
 // Navbars
 // --------------------------------------------------
 
-// Wrapper and base class
+// Wrapper and base class(基础导航条)
 //
 // Provide a static navbar from which we expand to create full-width, fixed, and
 // other navbar variations.
@@ -21,7 +21,7 @@
 }
 
 
-// Navbar heading
+// Navbar heading(导航条头部)
 //
 // Groups `.navbar-brand` and `.navbar-toggle` into a single component for easy
 // styling of responsive aspects.
@@ -34,7 +34,7 @@
 }
 
 
-// Navbar collapse (body)
+// Navbar collapse(导航条折叠)
 //
 // Group your navbar content into this for easy collapsing and expanding across
 // various device sizes. By default, this content is collapsed when <768px, but
@@ -43,7 +43,6 @@
 // To start (on mobile devices) the navbar links, forms, and buttons are stacked
 // vertically and include a `max-height` to overflow in case you have too much
 // content for the user's viewport.
-
 .navbar-collapse {
   overflow-x: visible;
   padding-right: @navbar-padding-horizontal;
@@ -99,7 +98,6 @@
 // Both navbar header and collapse
 //
 // When a container is present, change the behavior of the header and collapse.
-
 .container,
 .container-fluid {
   > .navbar-header,
@@ -131,7 +129,7 @@
   }
 }
 
-// Fix the top/bottom navbars when screen real estate supports it
+// Fix the top/bottom navbars when screen real estate supports it(固定导航条)
 .navbar-fixed-top,
 .navbar-fixed-bottom {
   position: fixed;
@@ -154,9 +152,7 @@
   border-width: 1px 0 0;
 }
 
-
-// Brand/project name
-
+// Brand/project name(导航条标题)
 .navbar-brand {
   float: left;
   padding: @navbar-padding-vertical @navbar-padding-horizontal;
@@ -182,11 +178,10 @@
 }
 
 
-// Navbar toggle
+// Navbar toggle(响应式导航条触发)
 //
 // Custom button for toggling the `.navbar-collapse`, powered by the collapse
 // JavaScript plugin.
-
 .navbar-toggle {
   position: relative;
   float: right;
@@ -204,7 +199,7 @@
     outline: 0;
   }
 
-  // Bars
+  // Bars(响应式导航触发图标的bar)
   .icon-bar {
     display: block;
     width: 22px;
@@ -220,12 +215,10 @@
   }
 }
 
-
-// Navbar nav links
+// Navbar nav links(导航条)
 //
 // Builds on top of the `.nav` components with its own modifier class to make
 // the nav the full height of the horizontal nav (above 768px).
-
 .navbar-nav {
   margin: (@navbar-padding-vertical / 2) -@navbar-padding-horizontal;
 
@@ -275,11 +268,10 @@
 }
 
 
-// Navbar form
+// Navbar form(带表单的导航条)
 //
 // Extension of the `.form-inline` with some extra flavor for optimum display in
 // our navbars.
-
 .navbar-form {
   margin-left: -@navbar-padding-horizontal;
   margin-right: -@navbar-padding-horizontal;
@@ -318,8 +310,7 @@
 }
 
 
-// Dropdown menus
-
+// Dropdown menus(下拉菜单)
 // Menu position and menu carets
 .navbar-nav > li > .dropdown-menu {
   margin-top: 0;
@@ -333,10 +324,9 @@
 }
 
 
-// Buttons in navbars
+// Buttons in navbars(导航条按钮)
 //
 // Vertically center a button within a navbar (when *not* in a form).
-
 .navbar-btn {
   .navbar-vertical-align(@input-height-base);
 
@@ -349,10 +339,9 @@
 }
 
 
-// Text in navbars
+// Text in navbars(导航条文本)
 //
 // Add a class to make any element properly align itself vertically within the navbars.
-
 .navbar-text {
   .navbar-vertical-align(@line-height-computed);
 
@@ -364,14 +353,13 @@
 }
 
 
-// Component alignment
+// Component alignment(表单对齐方式)
 //
 // Repurpose the pull utilities as their own navbar utilities to avoid specificity
 // issues with parents and chaining. Only do this when the navbar is uncollapsed
 // though so that navbar contents properly stack and align in mobile.
 //
 // Declared after the navbar components to ensure more specificity on the margins.
-
 @media (min-width: @grid-float-breakpoint) {
   .navbar-left  { .pull-left(); }
   .navbar-right {
@@ -388,7 +376,7 @@
 // Alternate navbars
 // --------------------------------------------------
 
-// Default navbar
+// Default navbar(默认导航条样式)
 .navbar-default {
   background-color: @navbar-default-bg;
   border-color: @navbar-default-border;
@@ -450,7 +438,7 @@
     border-color: @navbar-default-border;
   }
 
-  // Dropdown menu items
+  // Dropdown menu items(下拉菜单)
   .navbar-nav {
     // Remove background color from open dropdown
     > .open > a {
@@ -493,11 +481,9 @@
     }
   }
 
-
-  // Links in navbars
+  // Links in navbars(导航条链接)
   //
   // Add a class to ensure links outside the navbar nav are colored correctly.
-
   .navbar-link {
     color: @navbar-default-link-color;
     &:hover {
@@ -521,8 +507,7 @@
   }
 }
 
-// Inverse navbar
-
+// Inverse navbar(反色导航条)
 .navbar-inverse {
   background-color: @navbar-inverse-bg;
   border-color: @navbar-inverse-border;
