--- a/less/pagination.less
+++ b/less/pagination.less
@@ -1,5 +1,5 @@
 //
-// Pagination (multiple pages)
+// Pagination(分页导航)
 // --------------------------------------------------
 .pagination {
   display: inline-block;
