--- a/less/progress-bars.less
+++ b/less/progress-bars.less
@@ -3,9 +3,8 @@
 // --------------------------------------------------
 
 
-// Bar animations
+// Bar animations(进度条动画)
 // -------------------------
-
 // WebKit
 @-webkit-keyframes progress-bar-stripes {
   from  { background-position: 40px 0; }
@@ -22,7 +21,7 @@
 // Bar itself
 // -------------------------
 
-// Outer container
+// Outer container(外容器)
 .progress {
   overflow: hidden;
   height: @line-height-computed;
@@ -32,7 +31,7 @@
   .box-shadow(inset 0 1px 2px rgba(0,0,0,.1));
 }
 
-// Bar of progress
+// Bar of progress(进度条)
 .progress-bar {
   float: left;
   width: 0%;
@@ -46,7 +45,7 @@
   .transition(width .6s ease);
 }
 
-// Striped bars
+// Striped bars(条纹进度条)
 //
 // `.progress-striped .progress-bar` is deprecated as of v3.2.0 in favor of the
 // `.progress-bar-striped` class, which you just add to an existing
@@ -57,7 +56,7 @@
   background-size: 40px 40px;
 }
 
-// Call animation for the active one
+// Call animation for the active one(动态条纹进度条)
 //
 // `.progress.active .progress-bar` is deprecated as of v3.2.0 in favor of the
 // `.progress-bar.active` approach.
@@ -67,9 +66,8 @@
 }
 
 
-// Variations
+// Variations(彩色进度条)
 // -------------------------
-
 .progress-bar-success {
   .progress-bar-variant(@progress-bar-success-bg);
 }
